--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
-{% block title %}
-    Log In
-{% endblock %}
+
+{% block title %} Log In {% endblock %}
 
 {% block main %}
 
@@ -30,7 +29,4 @@
   </div>
 </div>
 
-
 {% endblock %}
-
-
