--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,21 +7,58 @@
 <div class="card" style="width: 35rem;">
 <h5 class="card-header">Profile</h5>
   <div class="card-body">
+    <img src="{{ url_for('static', filename = 'shrek.gif')}}" class="profile-pic">
     <h5 class="card-title">Hi there, I'm {{username}}</h5>
     <h6 class="card-subtitle mb-2 text-muted">{{userbio}}</h6>
     <a href="#" class="btn btn-success btn-follow">Follow</a>
   </div>
 </div>
 
-<div class="row1">
-  <div class="column">
+
+
+<div class="jumbotron jumbotron-fluid jumbotron-custom2">
+    <div class="container1">
+        <p class="lead1">Most recent pictures</p>
+    </div>
+</div>
+
+<div class="row row-1">
+
     {% for image in pictures %}
-      <a target="_blank" href="{{ url_for('static', filename='image.pic') }}"><img src="{{ image.pic }}"></a>
-      <a target="_blank" href="{{ url_for('static', filename='image.pic1') }}"><img src="{{ image.pic1 }}"></a>
-      <a target="_blank" href="{{ url_for('static', filename='image.pic2') }}"><img src="{{ image.pic2 }}"></a>
-      <a target="_blank" href="{{ url_for('static', filename='image.pic3') }}"><img src="{{ image.pic3 }}"></a>
+
+    <div class="card" style="width: 19rem;">
+      <img src="{{ image.pic }}" class="card-img-top" alt="Cars">
+      <div class="card-body">
+        <p class="card-text">{{ desc }}</p>
+        <a href="{{ image.pic }}" class="btn btn-primary">Full size</a>
+      </div>
+    </div>
+
+    <div class="card" style="width: 19rem;">
+      <img src="{{ image.pic1 }}" class="card-img-top" alt="Cars">
+      <div class="card-body">
+        <p class="card-text">{{ desc }}</p>
+        <a href="{{ image.pic1 }}" class="btn btn-primary">Full size</a>
+      </div>
+    </div>
+
+    <div class="card" style="width: 19rem;">
+      <img src="{{ image.pic2 }}" class="card-img-top" alt="Cars">
+      <div class="card-body">
+        <p class="card-text">{{ desc }}</p>
+        <a href="{{ image.pic2 }}" class="btn btn-primary">Full size</a>
+      </div>
+    </div>
+
+    <div class="card" style="width: 19rem;">
+      <img src="{{ image.pic3 }}" class="card-img-top" alt="Cars">
+      <div class="card-body">
+        <p class="card-text">{{ desc }}</p>
+        <a href="{{ image.pic3 }}" class="btn btn-primary">Full size</a>
+      </div>
+    </div>
+
     {% endfor %}
-  </div>
 </div>
 
 {% endblock %}
