--- a/templates/grinder.html
+++ b/templates/grinder.html
@@ -21,6 +21,7 @@
       <input type="hidden" id="ishmooiman" name="link1" value="{{ url_choice }}">
       <div class="text"></div>
       <button class="btn btn-light pic-btn">Choose</button>
+      <a href="#" class="btn btn-success pic-btn-low">Profile</a>
     </div>
     </form>
   </div>
@@ -33,6 +34,7 @@
       <input type="hidden" id="ishmooiman" name="link2" value="{{ url_choice_2 }}">
       <div class="text"></div>
       <button class="btn btn-light pic-btn">Choose</button>
+      <a href="#" class="btn btn-success pic-btn-low">Profile</a>
     </div>
     </form>
   </div>
@@ -50,6 +52,7 @@
       <input type="hidden" id="ishmooiman" name="link1" value="{{ url_choice }}">
       <div class="text"></div>
       <button class="btn btn-light pic-btn">Choose</button>
+      <a href="#" class="btn btn-success pic-btn-low">Profile</a>
     </div>
     </form>
   </div>
@@ -62,6 +65,7 @@
       <input type="hidden" id="ishmooiman" name="link2" value="{{ url_choice_2 }}">
       <div class="text"></div>
       <button class="btn btn-light pic-btn">Choose</button>
+      <a href="#" class="btn btn-success pic-btn-low">Profile</a>
     </div>
     </form>
   </div>
@@ -80,6 +84,7 @@
       <input type="hidden" id="ishmooiman" name="link1" value="{{ url_choice }}">
       <div class="text"></div>
       <button class="btn btn-light pic-btn">Choose</button>
+      <a href="#" class="btn btn-success pic-btn-low">Profile</a>
     </div>
     </form>
   </div>
@@ -92,6 +97,7 @@
       <input type="hidden" id="ishmooiman" name="link2" value="{{ url_choice_2 }}">
       <div class="text"></div>
       <button class="btn btn-light pic-btn">Choose</button>
+      <a href="#" class="btn btn-success pic-btn-low">Profile</a>
     </div>
     </form>
   </div>
@@ -110,6 +116,7 @@
       <input type="hidden" id="ishmooiman" name="link1" value="{{ url_choice }}">
       <div class="text"></div>
       <button class="btn btn-light pic-btn">Choose</button>
+      <a href="#" class="btn btn-success pic-btn-low">Profile</a>
     </div>
     </form>
   </div>
@@ -122,6 +129,7 @@
       <input type="hidden" id="ishmooiman" name="link2" value="{{ url_choice_2 }}">
       <div class="text"></div>
       <button class="btn btn-light pic-btn">Choose</button>
+      <a href="#" class="btn btn-success pic-btn-low">Profile</a>
     </div>
     </form>
   </div>
