--- a/templates/cats.html
+++ b/templates/cats.html
@@ -15,7 +15,7 @@
     <img src="{{ url_for('static', filename = 'Hotels.jpg')}}" alt="Hotels" class="image">
     <div class="overlay">
       <div class="text">Hotels</div>
-      <a href="{{ url_for('grinder_hotel') }}" class="btn btn-light pic-btn">Go!</a>
+      <a href="{{ url_for('hotels') }}" class="btn btn-light pic-btn">Go!</a>
     </div>
   </div>
 
@@ -23,7 +23,7 @@
     <img src="{{ url_for('static', filename = 'Yachts.jpg')}}" alt="Yachts" class="image" id="image">
     <div class="overlay">
       <div class="text">Yachts</div>
-      <a href="{{ url_for('grinder_yacht') }}" class="btn btn-light pic-btn">Go!</a>
+      <a href="{{ url_for('yachts') }}" class="btn btn-light pic-btn">Go!</a>
     </div>
   </div>
 
@@ -31,7 +31,7 @@
     <img src="{{ url_for('static', filename = 'Watches.jpg')}}" alt="Watches" class="image">
     <div class="overlay">
       <div class="text">Watches</div>
-      <a href="{{ url_for('grinder_watch') }}" class="btn btn-light pic-btn">Go!</a>
+      <a href="{{ url_for('watches') }}" class="btn btn-light pic-btn">Go!</a>
     </div>
   </div>
 
@@ -39,7 +39,7 @@
     <img src="{{ url_for('static', filename = 'Cars.jpg')}}" alt="Cars" class="image" id="image">
     <div class="overlay">
       <div class="text">Cars</div>
-      <a href="{{ url_for('grinder_car') }}" class="btn btn-light pic-btn">Go!</a>
+      <a href="{{ url_for('cars') }}" class="btn btn-light pic-btn">Go!</a>
     </div>
   </div>
 
