--- a/templates/top.html
+++ b/templates/top.html
@@ -11,29 +11,16 @@
 </div>
 
 <div class="row row-1">
+
     <div class="card" style="width: 19rem;">
-      <img src="" class="card-img-top" alt="Cars">
+      <h5 class="card-header card-first">First place</h5>
+      <img src="{{ url_for('static', filename = 'Hotels.jpg')}}" class="card-img-top">
       <div class="card-body">
-        <p class="card-text">{{ desc }}</p>
-        <a href="" class="btn btn-primary">Full size</a>
+        <p class="card-text">Description</p>
+        <a href="" class="btn btn-primary">View profile</a>
       </div>
     </div>
 
-    <div class="card" style="width: 19rem;">
-      <img src="" class="card-img-top" alt="Cars">
-      <div class="card-body">
-        <p class="card-text">{{ desc }}</p>
-        <a href="" class="btn btn-primary">Full size</a>
-      </div>
-    </div>
-
-    <div class="card" style="width: 19rem;">
-      <img src="" class="card-img-top" alt="Cars">
-      <div class="card-body">
-        <p class="card-text">{{ desc }}</p>
-        <a href="" class="btn btn-primary">Full size</a>
-      </div>
-    </div>
 </div>
 
 <table class="table table-striped">
