--- a/static/styles.css
+++ b/static/styles.css
@@ -382,3 +382,15 @@ main
   height: 100px;
   border-radius: 50%;
 }
+
+.card-first
+{
+  background-color: black !important;
+  color: white;
+}
+
+.card img
+{
+  width: auto;
+  height: 200px;
+}
