--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
 <script src="/static/js/script.js"></script>
+<script src="static/js/java.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
 
 
 <head>
@@ -29,6 +32,9 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{{ url_for('top') }}">Ranking</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('following') }}">Following</a>
         </li>
         </ul>
     </div>
