--- a/templates/grinder.html
+++ b/templates/grinder.html
@@ -21,7 +21,11 @@
       <input type="hidden" id="ishmooiman" name="link1" value="{{ url_choice }}">
       <div class="text"></div>
       <button class="btn btn-light pic-btn">Choose</button>
-      <a href="#" class="btn btn-success pic-btn-low">Profile</a>
+       </form>
+      <form action="{{ url_for('user_profile')}}" method= "POST">
+      <input type="hidden" id="test" name="follow" value="{{ url_choice }}">
+      <button class="btn btn-success pic-btn-low">Profile</button>
+      </form>
     </div>
     </form>
   </div>
@@ -34,9 +38,12 @@
       <input type="hidden" id="ishmooiman" name="link2" value="{{ url_choice_2 }}">
       <div class="text"></div>
       <button class="btn btn-light pic-btn">Choose</button>
-      <a href="#" class="btn btn-success pic-btn-low">Profile</a>
+      </form>
+      <form action="{{ url_for('user_profile')}}" method= "POST">
+      <input type="hidden" id="test" name="follow" value="{{ url_choice_2 }}">
+      <button class="btn btn-success pic-btn-low">Profile</button>
+      </form>
     </div>
-    </form>
   </div>
 </div>
 
@@ -52,9 +59,12 @@
       <input type="hidden" id="ishmooiman" name="link1" value="{{ url_choice }}">
       <div class="text"></div>
       <button class="btn btn-light pic-btn">Choose</button>
-      <a href="#" class="btn btn-success pic-btn-low">Profile</a>
+      </form>
+      <form action="{{ url_for('user_profile')}}" method= "POST">
+      <input type="hidden" id="test" name="follow" value="{{ url_choice }}">
+      <button class="btn btn-success pic-btn-low">Profile</button>
+      </form>
     </div>
-    </form>
   </div>
 
   <div class="container">
@@ -65,9 +75,12 @@
       <input type="hidden" id="ishmooiman" name="link2" value="{{ url_choice_2 }}">
       <div class="text"></div>
       <button class="btn btn-light pic-btn">Choose</button>
-      <a href="#" class="btn btn-success pic-btn-low">Profile</a>
+      </form>
+      <form action="{{ url_for('user_profile')}}" method= "POST">
+      <input type="hidden" id="test" name="follow" value="{{ url_choice_2 }}">
+      <button class="btn btn-success pic-btn-low">Profile</button>
+      </form>
     </div>
-    </form>
   </div>
 </div>
 
@@ -84,9 +97,12 @@
       <input type="hidden" id="ishmooiman" name="link1" value="{{ url_choice }}">
       <div class="text"></div>
       <button class="btn btn-light pic-btn">Choose</button>
-      <a href="#" class="btn btn-success pic-btn-low">Profile</a>
+      </form>
+      <form action="{{ url_for('user_profile')}}" method= "POST">
+      <input type="hidden" id="test" name="follow" value="{{ url_choice }}">
+      <button class="btn btn-success pic-btn-low">Profile</button>
+      </form>
     </div>
-    </form>
   </div>
 
   <div class="container">
@@ -97,9 +113,12 @@
       <input type="hidden" id="ishmooiman" name="link2" value="{{ url_choice_2 }}">
       <div class="text"></div>
       <button class="btn btn-light pic-btn">Choose</button>
-      <a href="#" class="btn btn-success pic-btn-low">Profile</a>
+      </form>
+      <form action="{{ url_for('user_profile')}}" method= "POST">
+      <input type="hidden" id="test" name="follow" value="{{ url_choice_2 }}">
+      <button class="btn btn-success pic-btn-low">Profile</button>
+      </form>
     </div>
-    </form>
   </div>
 </div>
 
@@ -116,9 +135,12 @@
       <input type="hidden" id="ishmooiman" name="link1" value="{{ url_choice }}">
       <div class="text"></div>
       <button class="btn btn-light pic-btn">Choose</button>
-      <a href="#" class="btn btn-success pic-btn-low">Profile</a>
+     </form>
+      <form action="{{ url_for('user_profile')}}" method= "POST">
+      <input type="hidden" id="test" name="follow" value="{{ url_choice }}">
+      <button class="btn btn-success pic-btn-low">Profile</button>
+      </form>
     </div>
-    </form>
   </div>
 
   <div class="container">
@@ -129,9 +151,12 @@
       <input type="hidden" id="ishmooiman" name="link2" value="{{ url_choice_2 }}">
       <div class="text"></div>
       <button class="btn btn-light pic-btn">Choose</button>
-      <a href="#" class="btn btn-success pic-btn-low">Profile</a>
+      </form>
+      <form action="{{ url_for('user_profile')}}" method= "POST">
+      <input type="hidden" id="test" name="follow" value="{{ url_choice_2 }}">
+      <button class="btn btn-success pic-btn-low">Profile</button>
+      </form>
     </div>
-    </form>
   </div>
 </div>
 
